tests/sideEffectingExpressions/invalid/syntax/missingOperand.wacc
# operator missing operand

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int b = 0 ;
  b *=
end
